Bug 1348291 - Call EndPaint when painting is skipped if BeginPaint was called. r=mattwoodrow a=lizzard